--- a/cssm/pom.xml
+++ b/cssm/pom.xml
@@ -246,6 +246,17 @@
             <version>1.7.7</version>
         </dependency>
 		
+		<!-- 分页助手 -->
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper</artifactId>
+			<version>3.7.5</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.jsqlparser</groupId>
+			<artifactId>jsqlparser</artifactId>
+			<version>0.9.1</version>
+		</dependency>
   </dependencies>
   <build>
     <finalName>cssm</finalName>
