--- a/cssm/src/main/resources/jdbc.properties
+++ b/cssm/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.0.90:3306/ssm?useUnicode=true&characterEncoding=utf8
+jdbc.url=jdbc:mysql://192.168.0.90:3306/cssm?useUnicode=true&characterEncoding=utf8
 jdbc.username=root
 jdbc.password=root
